refactor(asciidoc): rename parse method to toAsciiModel
- Renamed `parse` method to `toAsciiModel` for clarity
- Updated all references to use the new method name
- Simplified conditional logic in `stringifyParagraph`
- Replaced if-else chain with switch expression in `stringifyRuns`
- Adjusted heading level calculation using `Math.clamp`